start of sprint stamina/stamina UI
right now the stamina draws over itself multiple times while
decrementing, no clue why!

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="js/squashball.js"></script>
 <script src="js/main.js"></script>
 <script src="js/input.js"></script>
+<script src="js/UI.js"></script>
 
 
 </body>
