--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 <p id="levelOutput"></p>
 
+<script src="js/howler.core.min.js"></script>
+<script src="js/soundsystem.js"></script>
 <script src="js/graphicscommon.js"></script>
 <script src="js/imageloading.js"></script>
 <script src="js/particlesystem.js"></script>
