adds score counter gif, sprint sprite computer plater

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <script src="js/main.js"></script>
 <script src="js/input.js"></script>
 <script src="js/UI.js"></script>
+<script src="js/scorecounter.js"></script>
 
 
 </body>
