re-organize sheets for swing functions;computer player on the court

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <script src="js/particlesystem.js"></script>
 <script src="js/squashball.js"></script>
 <script src="js/player1.js"></script>
+<script src="js/Court.js"></script>
+<script src="js/computerplayer.js"></script>
 <script src="js/main.js"></script>
 <script src="js/input.js"></script>
 <script src="js/UI.js"></script>
