Reset if ball has bounced twice

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="js/particlesystem.js"></script>
 <script src="js/squashball.js"></script>
 <script src="js/player1.js"></script>
+<script src="js/rules.js"></script>
 <script src="js/Court.js"></script>
 <script src="js/computerplayer.js"></script>
 <script src="js/main.js"></script>
