--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script src="js/rules.js"></script>
 <script src="js/Court.js"></script>
 <script src="js/computerplayer.js"></script>
-<script src="js/menu.js"></script>"
+<script src="js/menu.js"></script>
 <script src="js/main.js"></script>
 <script src="js/input.js"></script>
 <script src="js/UI.js"></script>
