First pass on rules and score
Game now keeps track of score. It currently hits the console when it updates

Score point by:
Opponent hitting tin
Opponent letting ball bounce twice

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <script src="js/main.js"></script>
 <script src="js/input.js"></script>
 <script src="js/UI.js"></script>
+<script src="js/game.js"></script>
 <script src="js/scorecounter.js"></script>
 
 
