--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<meta content="utf-8" http-equiv="encoding">
-<style>
-    canvas {
-        image-rendering: optimizeSpeed; /* Older versions of FF          */
-        image-rendering: -moz-crisp-edges; /* FF 6.0+                       */
-        image-rendering: -webkit-optimize-contrast; /* Safari                        */
-        image-rendering: -o-crisp-edges; /* OS X & Windows Opera (12.02+) */
-        image-rendering: pixelated; /* Awesome future-browsers       */
-        -ms-interpolation-mode: nearest-neighbor; /* IE                            */
-    }
-</style>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    <style>
+        canvas {
+            image-rendering: optimizeSpeed; /* Older versions of FF          */
+            image-rendering: -moz-crisp-edges; /* FF 6.0+                       */
+            image-rendering: -webkit-optimize-contrast; /* Safari                        */
+            image-rendering: -o-crisp-edges; /* OS X & Windows Opera (12.02+) */
+            image-rendering: pixelated; /* Awesome future-browsers       */
+            -ms-interpolation-mode: nearest-neighbor; /* IE                            */
+        }
+    </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="800" height="600"></canvas>
-<p id="levelOutput"></p>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <p id="levelOutput"></p>
 
-<script src="js/howler.core.min.js"></script>
-<script src="js/soundsystem.js"></script>
-<script src="js/graphicscommon.js"></script>
-<script src="js/imageloading.js"></script>
-<script src="js/particlesystem.js"></script>
-<script src="js/squashball.js"></script>
-<script src="js/player1.js"></script>
-<script src="js/rules.js"></script>
-<script src="js/Court.js"></script>
-<script src="js/computerplayer.js"></script>
-<script src="js/menu.js"></script>
-<script src="js/main.js"></script>
-<script src="js/input.js"></script>
-<script src="js/UI.js"></script>
-<script src="js/game.js"></script>
-<script src="js/scorecounter.js"></script>
+    <script src="js/howler.core.min.js"></script>
+    <script src="js/soundsystem.js"></script>
+    <script src="js/graphicscommon.js"></script>
+    <script src="js/imageloading.js"></script>
+    <script src="js/particlesystem.js"></script>
+    <script src="js/squashball.js"></script>
+    <script src="js/player1.js"></script>
+    <script src="js/rules.js"></script>
+    <script src="js/Court.js"></script>
+    <script src="js/computerplayer.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/input.js"></script>
+    <script src="js/serve.js"></script>
+    <script src="js/UI.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/scorecounter.js"></script>
 
 
 </body>
