--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/graphicscommon.js"></script>
     <script src="js/imageloading.js"></script>
     <script src="js/particlesystem.js"></script>
+    <script src="js/particles_two.js"></script>
     <script src="js/squashball.js"></script>
     <script src="js/player1.js"></script>
     <script src="js/rules.js"></script>
