Commented out the Scaling Code
The scaling caused AI and effect issues, so I commented it out until I
can investigate.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
     <style>
         body {
-            background-color: #000000;
+            // ### Scaling Code WIP ### background-color: #000000;
         }
         canvas {
             position: absolute;
             top: 0px;
             left: 0px;
-            height: 100vh;
-            width: 100vw;
+            // ### Scaling Code WIP ### height: 100vh;
+            // ### Scaling Code WIP ### width: 100vw;
             image-rendering: optimizeSpeed; /* Older versions of FF          */
             image-rendering: -moz-crisp-edges; /* FF 6.0+                       */
             image-rendering: -webkit-optimize-contrast; /* Safari                        */
