--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-
+    <title>Squash Encounter</title>
     <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+        }
+
         body {
             background-color: #000000;
+            overflow: hidden;
         }
 
         #gameArea {
-            width: 800px;
-            height: 600px;
-            margin: 0px auto;
             position: relative;
+            width: 100%;
+            height: 100%;
         }
 
         canvas {
-            top: 0px;
-            left: 0px;
-            position: absolute;
             image-rendering: optimizeSpeed; /* Older versions of FF          */
             image-rendering: -moz-crisp-edges; /* FF 6.0+                       */
             image-rendering: -webkit-optimize-contrast; /* Safari                        */
@@ -27,14 +31,23 @@
             image-rendering: pixelated; /* Awesome future-browsers       */
             -ms-interpolation-mode: nearest-neighbor; /* IE                            */
         }
+
+        #drawCanvas {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 
 <body>
-    <section id="gameArea">
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="gameArea">
+        <canvas id="drawCanvas">
+            <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </canvas>
         <p id="levelOutput"></p>
-    </section>
+    </div>
 
     <script src="js/screenfull.js"></script>
     <script src="js/howler.core.min.js"></script>
@@ -50,6 +63,7 @@
     <script src="js/computerplayer.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/scaleCanvas.js"></script>
     <script src="js/input.js"></script>
     <script src="js/serve.js"></script>
     <script src="js/UI.js"></script>
