--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="js/player1.js"></script>
     <script src="js/rules.js"></script>
     <script src="js/Court.js"></script>
+    <script src="js/particles_killshot.js"></script>
     <script src="js/computerplayer.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/main.js"></script>
