--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <title>Squash Encounter</title>
+    <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet"> type="text/css">
     <style>
         html, body {
             width: 100%;
