--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <title>Squash Encounter</title>
-    <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet"> type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet" type="text/css">
     <style>
         html, body {
             width: 100%;
@@ -50,7 +50,6 @@
         <p id="levelOutput"></p>
     </div>
 
-    <script src="js/screenfull.js"></script>
     <script src="js/howler.core.min.js"></script>
     <script src="js/soundsystem.js"></script>
     <script src="js/graphicscommon.js"></script>
