--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
             padding: 0;
         }
 
-        html, body,
-        canvas, #gameArea {
+        html, body, #gameArea {
             position: relative;
             width: 100%;
             height: 100%;
