--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Squash Encounter</title>
     <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet" type="text/css">
     <style>
         *, html, body {
             margin: 0;
