--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <script src="js/UI.js"></script>
     <script src="js/game.js"></script>
     <script src="js/scorecounter.js"></script>
+    <script src="js/GamepadKeyboardEventEmulator.js"></script>
 
 </body>
 </html>
